feat: configured for production with a docker file.
refactor: removed cors configurations on each controllers and added corsconfig and edited security config files, added PostgreSQL database for easy hosting, changed employee apis to return empty without returning null.